GNOME Bugzilla – Bug 736962
[PATCH] master nmcli crashes upon connection creation
Last modified: 2014-09-19 12:33:47 UTC
Created attachment 286614 [details] [review] [PATCH] libnm: avoid init_async NULL dereference on cancellable=0x0 (gdb) run c add type bond Starting program: /usr/bin/nmcli c add type bond Got object file from memory but can't read symbols: File truncated. [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib64/libthread_db.so.1". [New Thread 0x7ffff39b2700 (LWP 13042)] [New Thread 0x7fffec4bc700 (LWP 13043)] (process:13038): GLib-GObject-CRITICAL **: g_object_ref: assertion 'G_IS_OBJECT (object)' failed Program received signal SIGTRAP, Trace/breakpoint trap. g_logv (log_domain=0x7ffff5cda224 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffd290) at gmessages.c:1046 1046 g_private_set (&g_log_depth, GUINT_TO_POINTER (depth)); (gdb) bt
+ Trace 234109
Oops. committed.